tests/ui/msg_send_only_message.stderr
error[E0277]: the trait bound `{integer}: MessageReceiver` is not satisfied
 --> ui/msg_send_only_message.rs:5:14
  |
5 |     unsafe { msg_send![1, new] };
  |              ^^^^^^^^^^^^^^^^^ the trait `MessageReceiver` is not implemented for `{integer}`
  |
  = help: the following other types implement trait `MessageReceiver`:
            &'a Id<T, O>
            &'a T
            &'a mut Id<T, objc2::rc::Owned>
            &'a mut T
            &'a objc2::runtime::Class
            *const T
            *const objc2::runtime::Class
            *mut T
          and 2 others
  = note: this error originates in the macro `msg_send` (in Nightly builds, run with -Z macro-backtrace for more info)
